--- a/pingpong/templates/footer.html
+++ b/pingpong/templates/footer.html
@@ -5,7 +5,9 @@
 		<a href="{% url pingpong.views.terms %}">Terms of use</a>
 		<a href="{% url pingpong.views.privacy %}">Privacy policy</a>
 	</div>
-	<a href="" onClick="showPopup('signup', '{% url pingpong.views.signup %}', 'name'); return false;" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
+	<div class="core_tryit core_right">
+		<a href="" onClick="showPopup('signup', '{% url pingpong.views.signup %}', 'name'); return false;"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
+	</div>
 	<div class="core_clear"></div>
 	<span class="cancel core_right">Then $8.95/ mo. Cancel anytime - no hassle.</span>
 </div>
