--- a/pingpong/templates/base.html
+++ b/pingpong/templates/base.html
@@ -2,12 +2,13 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>{% block title %}{% endblock %}PingPongNinja</title>
+  <title>{% block title %}{% endblock %}PingPongNinja - In-office ping pong and table tennis tournament software</title>
+  <meta name="viewport" content="width=320, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
   {% block css %}
     <link rel="stylesheet" type="text/css"  media="screen, projection" href="{{ MEDIA_URL }}combined-{% if LANGUAGE_BIDI %}rtl{% else %}ltr{% endif %}.css" />
-    <!--[if IE]>
+	<!--[if IE]>
       <link rel="stylesheet" type="text/css" media="screen, projection" href="{{ MEDIA_URL }}ie.css">
     <![endif]-->
   {% endblock %}
@@ -15,7 +16,7 @@
     <script type="text/javascript" src="{{ MEDIA_URL }}combined-{{ LANGUAGE_CODE }}.js"></script>
   {% endblock %}
 </head>
-<body{% block body-atts%}{% endblock %}>
+<body{% block body-atts%}{% endblock %} class="{% if isMobile %}mobile{% endif %}">
 	<div id="core_shade" class="core_shade" onClick="hideShade();" style="display:none;"></div>
 	<div id="message" class="core_message core_radius_bottom6" style="display: none;">Loading...</div>
 	<div id="popup_container"></div>
