--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -5,29 +5,30 @@
 {% block content %}
   <div class="top">
   	<div class="logo">
-  		<span class="core_right login_box">
+  		<div class="core_right login_box">
     		{% if not request.user.is_authenticated %}
   			<div class="login">
     			  <div class="signup"><a href="" onclick="showPopup('signup', '{% url pingpong.views.signup %}', 'name'); return false;">Signup</a></div>
-  			  <form action="{% url pingpong.views.login %}" method="post">
-            <input type="image" src="{{ MEDIA_URL }}pingpong/images/btn_home_login.jpg" height="28" width="55" tabindex="3" class="core_right" />
-            <input type="password" id="loginPassword" onfocus="loginClear();" onblur="loginFormValue();" name="password" tabindex="2" class="small core_right"  />
-            <input type="text" id="loginUsername" onfocus="loginClear('username');" onblur="loginFormValue();" name="username" tabindex="1" class="small core_right" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
-  			  </form>
+						<form action="{% url pingpong.views.login %}" method="post">
+							<input type="text" id="loginUsername" onfocus="loginClear('username');" onblur="loginFormValue();" name="username" tabindex="1" class="small core_left" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
+							<input type="password" id="loginPassword" onfocus="loginClear();" onblur="loginFormValue();" name="password" tabindex="2" class="small core_left" />
+							<input type="image" src="{{ MEDIA_URL }}pingpong/images/btn_home_login.jpg" height="28" width="55" tabindex="3" class="core_left" />
+						</form>
   			  {% if login_error %}<div id="login_error">{{ login_error }}</div>{% endif %}
   			</div>
   			{% else %}
   			<div class="logged_in">
-  			  Welcome {{ user.username }}! &nbsp;&nbsp;<a href="{% url pingpong.views.index %}">My dashboard</a> | <a href="{% url django.contrib.auth.views.logout %}">Logout</a>
+  			  <span class="core_welcome">Welcome {{ user.username }}! &nbsp;&nbsp;</span><a href="{% url pingpong.views.index %}">My dashboard</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="{% url django.contrib.auth.views.logout %}">Logout</a>
   			</div>
   			{% endif %}
   			<div class="core_clear"></div>
-  		</span>
-  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" />
+  		</div>
+  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" class="core_logo" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" />
+			<div class="core_clear"></div>
   	</div>
   </div>
   <div class="container">
-		<a href="" onclick="showPopup('signup', '/signup', 'name'); return false;" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_screenshot.jpg" width="459" height="438" /></a>
+		<a href="" onclick="showPopup('signup', '/signup', 'name'); return false;" class="core_right core_screenshot"><img src="{{ MEDIA_URL }}pingpong/images/home_screenshot.jpg" width="459" height="438" /></a>
 		<div class="copy">
 			<div class="intro">Track all of your singles and doubles scores and know for sure who's the best in the office.</div>
 			<div class="feature unlimited">
