--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -30,7 +30,7 @@ td { vertical-align: top; }
 .add_enter_scores span a, .add_enter_scores span a:hover { color: #999; }
 .add_exact { position: absolute; right: 25px; top: 9px; }
 .add_header { margin-bottom: 13px; }
-.add_player { float: left; padding: 5px 7px; cursor: pointer; font-size: 11px; margin: 0 11px 6px 0; font-weight: bold; width: 105px; text-align: left; border: 1px solid #DFDCD9; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFF), to(#F1F0ED)); background-image: -moz-linear-gradient(0% 100% 90deg,#F1F0ED, #FFF); -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px; }
+.add_player { float: left; padding: 5px 7px; cursor: pointer; font-size: 11px; margin: 0 11px 6px 0; font-weight: bold; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; width: 105px; text-align: left; border: 1px solid #DFDCD9; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFF), to(#F1F0ED)); background-image: -moz-linear-gradient(0% 100% 90deg,#F1F0ED, #FFF); -moz-border-radius:3px; border-radius:3px; -webkit-border-radius:3px; }
 .add_player.selected, .add_player:hover { border: 1px solid #039BCE;  cursor: default; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#03AFE9), to(#0280AB)); background-image: -moz-linear-gradient(0% 100% 90deg,#0280AB, #03AFE9); }
 .add_player.selected a, .add_player:hover a { color: #FFF; cursor: default; }
 .add_player a { color: #8A8A8A; text-decoration: none; }
@@ -92,15 +92,15 @@ td { vertical-align: top; }
 .core_right { float: right; }
 .core_shade { position: absolute; background: #101314; opacity: 0.9; -moz-opacity: 0.9; -khtml-opacity: 0.9; filter: alpha(opacity=90); width: 100%; height: 100%; top: 0; left: 0; z-index: 1000; }
 .core_text_med { font-size: 90%; font-weight: normal; }
-.core_the_rest { position: relative; float: left; min-width: 300px; width: 100%; cursor: pointer; margin: 19px 35px 0 0; padding: 4px 8px 7px 8px; font-size: 22px; text-shadow: 2px 2px 3px #141414; color: #DDD; border-bottom: 3px solid #181818; border-right: 3px solid #181818; border-top: 3px solid #2D2D2D; border-left: 3px solid #2D2D2D; height: 59px; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#282828), to(#1B1B1B)); background-image: -moz-linear-gradient(0% 100% 90deg,#1B1B1B, #282828); -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; cu }
+.core_the_rest { position: relative; float: left; min-width: 300px; cursor: pointer; margin: 19px 35px 0 0; padding: 4px 8px 7px 8px; font-size: 22px; text-shadow: 2px 2px 3px #141414; color: #DDD; border-bottom: 3px solid #181818; border-right: 3px solid #181818; border-top: 3px solid #2D2D2D; border-left: 3px solid #2D2D2D; height: 59px; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#282828), to(#1B1B1B)); background-image: -moz-linear-gradient(0% 100% 90deg,#1B1B1B, #282828); -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; cu }
 .core_the_rest .core_last { margin-top: 7px; position: absolute; right: 95px; }
-.core_the_rest .name { float: left; margin: 23px 0 0 0; padding-bottom: 8px; overflow: hidden; width: 210px; }
+.core_the_rest .name { float: left; margin: 23px 0 0 0; padding-bottom: 8px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; width: 50%; }
 .core_the_rest .points { float: right; font-weight: bold; margin: 21px 23px 0 0; }
 .core_the_rest .rank { width: 30px; float: left; margin: 21px 0 0 23px; }
 .core_the_rest td { width: 33%; }
 .core_top_three { padding: 23px; min-width: 485px; margin: 0 39px 16px 0; font-size: 26px; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#424242), to(#0F0F0F)); background-image: -moz-linear-gradient(0% 100% 90deg,#0F0F0F, #424242); }
 .core_top_three li { padding: 18px 20px; min-width: 300px; margin-bottom: 23px; cursor: pointer; text-shadow: 2px 2px 3px #1C1C1C; border-top: 2px solid #2C2C2C; border-left: 2px solid #2C2C2C; border-bottom: 1px solid #424242; border-right: 1px solid #424242; -moz-box-shadow: #1B1B1B 2px 2px 2px 0 inset; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#303030), to(#2B2B2B)); background-image: -moz-linear-gradient(0% 100% 90deg,#2B2B2B, #303030); }
-.core_top_three li .name { float: left; font-size: 33px; font-weight: bold; margin: 19px 0 0 46px; }
+.core_top_three li .name { float: left; font-size: 33px; width: 45%; font-weight: bold; padding: 10px 0; margin: 7px 0 0 46px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
 .core_top_three li .points { float: right; font-size: 33px; font-weight: bold; margin: 15px 0 0 0; }
 .core_top_three li .rank { float: left; background: #7C7C7C; border-top: 2px solid #878787; border-left: 2px solid #878787; border-bottom: 2px solid #6F6F6F; border-right: 2px solid #6F6F6F; height: 26px; padding: 12px 16px; font-weight: bold; font-size: 28px; color: #FFF; text-shadow: 2px 2px 3px #616161; }
 .core_top_three li:nth-child(1n+2) { background-image: none; border: none; -moz-box-shadow: none; margin-bottom: 13px; }
@@ -187,12 +187,12 @@ body.mobile .core_last { font-size: 14px; padding: 0 6px 6px 6px; width: auto; m
 body.mobile .core_main { padding-bottom: 1px; }
 body.mobile .core_rankings_div { margin: 8px 0 8px 8px; }
 body.mobile .core_the_rest { min-width: 285px; font-size: 12px; height: auto; width: auto; padding: 2px 8px 0 8px; margin: 6px 9px 0 0; float: none; display: block; }
-body.mobile .core_the_rest .name { margin-top: 7px; width: auto; }
+body.mobile .core_the_rest .name { margin-top: 7px; width: 60%; }
 body.mobile .core_the_rest .points { margin: 7px 7px 0 0; }
 body.mobile .core_the_rest .rank { margin: 5px 5px 5px 13px; width: 23px; }
 body.mobile .core_top_three { min-width: 290px; padding: 8px 8px 1px 8px; margin: 0 10px 10px 0; }
 body.mobile .core_top_three li { padding: 4px 8px; min-width: 250px; margin-bottom: 5px; }
-body.mobile .core_top_three li .name { font-size: 14px; margin: 3px 0 0 10px; }
+body.mobile .core_top_three li .name { font-size: 14px; padding: 0; margin: 3px 0 0 10px; }
 body.mobile .core_top_three li .points { font-size: 14px; margin-top: 3px; }
 body.mobile .core_top_three li .rank { font-size: 14px; padding: 0 6px 2px 6px; height: auto; }
 body.mobile .core_top_three li:nth-child(2) { border-bottom: none; }
