added google multivariate code for pricing testing.

--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -10,7 +10,7 @@
 		<div class="intro">Track all of your singles and doubles scores and know for sure who's the best in the office.</div>
 		<div class="feature unlimited">
 			<h2>Unlimited players &amp; games</h2>
-			<p>You can add unlimited players and list unlimited games for just $8.95/mo.  Cancel anytime and take your data with you.</p>
+			<p>You can add unlimited players and list unlimited games for just <script>utmx_section("8.95")</script>$8.95</noscript>/mo.  Cancel anytime and take your data with you.</p>
 		</div>
 		<div class="feature trial">
 			<h2>14 day free trial</h2>
