--- a/pingpong/templates/terms.html
+++ b/pingpong/templates/terms.html
@@ -42,7 +42,7 @@
           <h3>Payment of Fees:</h3>
           <ol>
                <li>A valid PayPal account is required for paying accounts.</li>
-               <li>While a member of PingPongNinja every 30 days your paypal account will be charged $8.95. You may cancel your membership at any time by logging into your PayPal account and cancelling your subscription. You can also email us at <a href="mailto:support@PingPongNinja.com">support@PingPongNinja.com</a>, and request that we cancel your account. </li>
+               <li>While a member of PingPongNinja every 30 days your paypal account will be charged <script>utmx_section("8.95")</script>$8.95</noscript>. You may cancel your membership at any time by logging into your PayPal account and cancelling your subscription. You can also email us at <a href="mailto:support@PingPongNinja.com">support@PingPongNinja.com</a>, and request that we cancel your account. </li>
                <li>Fees are exclusive of all taxes, levies, or duties imposed by taxing authorities, and you shall be responsible for payment of all such taxes, levies, or duties. </li>
           </ol>
           <h3>Cancellation and Termination:</h3>
