--- a/pingpong/templates/signup_thanks.html
+++ b/pingpong/templates/signup_thanks.html
@@ -10,5 +10,16 @@
 			<p>We'll let you know when we've opened up more accounts.</p>
     </div>
 </div>
+<!-- Google Website Optimizer Conversion Script -->
+<script type="text/javascript">
+if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
+(document.location.protocol=='https:'?'s://ssl':'://www')+
+'.google-analytics.com/ga.js"></sc'+'ript>')</script>
+<script type="text/javascript">
+try {
+var gwoTracker=_gat._getTracker("UA-16365298-2");
+gwoTracker._trackPageview("/0597168111/goal");
+}catch(err){}</script>
+<!-- End of Google Website Optimizer Conversion Script -->
 {% include 'footer.html' %}
 {% endblock %}
