--- a/pingpong/templates/top.html
+++ b/pingpong/templates/top.html
@@ -3,7 +3,7 @@
     <span class="core_right login_box">
     {% if not request.user.is_authenticated %}
     <div class="login">
-      <div class="signup"><a href="" onclick="showPopup('freetrial', '/freetrial', ''); return false;">Signup</a></div>
+      <div class="signup"><a href="" onclick="showPopup('signup', '{% url pingpong.views.signup %}', 'name'); return false;">Signup</a></div>
       <form action="{% url pingpong.views.login %}" method="post">
         <input type="image" src="{{ MEDIA_URL }}pingpong/images/btn_home_login.jpg" height="28" width="55" tabindex="3" class="core_right" />
         <input type="password" id="loginPassword" onfocus="loginClear();" onblur="loginFormValue();" name="password" tabindex="2" class="small core_right"  />
