--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -16,6 +16,7 @@ input.fat { padding: 3px 5px; margin: 0 10px 4px 0; -moz-border-radius:3px; bord
 input.med { width: 200px; }
 label { font-size: 13px; font-weight: bold; }
 label.error { color: #993300; font-weight: normal; font-size: 12px; line-height: 23px; font-family: Arial, Helvetica, sans-serif; }
+ul.errorlist li { list-style: none outside none; color: #993300; font-weight: bold; font-size: 12px; line-height: 23px; font-family: Arial, Helvetica, sans-serif; }
 /* label { color: #333; display: block; font-weight: bold; margin: 0 0 5px 0; } */
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal; }
 li { list-style: none; }
