2 col fix - and fixed price on signup

--- a/pingpong/templates/signup.html
+++ b/pingpong/templates/signup.html
@@ -43,7 +43,7 @@
 				<h3>How much does it cost?</h3>
 				<ul>
 					<li>Try for free for 14 days.  No credit card is required.</li>
-					<li>Then pay <strong>$8.95/mo</strong> (unlimited games and players)</li>
+					<li>Then pay <strong><script>utmx_section("8.95")</script>$8.95</noscript>/mo</strong> (unlimited games and players)</li>
 					<li>Cancel anytime with zero hassle.</li>
 				</ul>
 			</div>
