--- a/pingpong/templates/footer.html
+++ b/pingpong/templates/footer.html
@@ -9,7 +9,7 @@
 		<a href="" onClick="showPopup('signup', '{% url pingpong.views.signup %}', 'name'); return false;"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
 	</div>
 	<div class="core_clear"></div>
-	<span class="cancel core_right">Then <script>utmx_section("8.95")</script>$8.95</noscript>/ mo. Cancel anytime - no hassle.</span>
+	<span class="cancel core_right">Then <script>utmx_section("base")</script><span id="price">$8.95</span></noscript>/ mo. Cancel anytime - no hassle.</span>
 </div>
 <script type="text/javascript">
     loginFormValue();
