added ticks to slider

--- a/pingpong/templates/addscore.html
+++ b/pingpong/templates/addscore.html
@@ -46,6 +46,15 @@
 				
 				<div class="add_slider">
 					<div id="teamOneSlider"></div>
+					<div class="add_ticks">
+						<div class="add_marker">0</div>
+						<div class="add_marker" style="margin-left: 53px;">5</div>
+						<div class="add_marker" style="margin-left: 51px;">10</div>
+						<div class="add_marker" style="margin-left: 49px;">15</div>
+						<div class="add_marker" style="margin-left: 49px;">20</div>
+						<div class="add_marker" style="margin-left: 49px;">25</div>
+						<div class="core_clear"></div>
+					</div>
 				</div>
 			</div>
 			<div class="popup_half core_right core_center popup_dark core_radius6">
@@ -69,6 +78,15 @@
 				</div>
 				<div class="add_slider">
 					<div id="teamTwoSlider"></div>
+					<div class="add_ticks">
+						<div class="add_marker">0</div>
+						<div class="add_marker" style="margin-left: 53px;">5</div>
+						<div class="add_marker" style="margin-left: 51px;">10</div>
+						<div class="add_marker" style="margin-left: 49px;">15</div>
+						<div class="add_marker" style="margin-left: 49px;">20</div>
+						<div class="add_marker" style="margin-left: 49px;">25</div>
+						<div class="core_clear"></div>
+					</div>
 				</div>
 			</div>
 			<div class="core_clear"></div>
